--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,24 @@ jobs:
 
       - name: Build with Gradle Wrapper
         run: ./gradlew build
+
+  lint:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - uses: lucasnlm/ktlint-action@v1.0.1
+      - name: Lint kotlin
+        run: ./gradlew build
