--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
       - name: Set up JDK 17
         uses: actions/setup-java@v4
-        fetch-depth: 0
         with:
           java-version: '17'
           distribution: 'temurin'
